# SigmaMu

./: .gitignore  .readthedocs.yaml  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
doc/source/: bibliographics.bib  bibliographics.rst  bibliographies.bib  conf.py  custom_directives.py  faq.rst  getting_started.rst  index.rst  introduction.rst  license.rst  release_notes.rst
doc/source/_static/: custom.css
doc/source/api/: api.rst
doc/source/examples/: hello_world.py  ideal_gas.py  ideal_gas_material.py  material_amodel.py  material_factory.py  material_model.py
doc/source/figures/: classes_thermo.dia  model_collaboration.dia  readme.txt
doc/source/tutorial/: create_thermo_frame.rst  dof_analysis.rst  first_models.rst  solving_models.rst  steam_system.rst  tutorial.rst
example/: readme.txt
example/rk_eos/: frame_definitions.yml  full_rk_model.py  parameters.yml  rk_parameter_fit.py  rkt.py  structures.yml
examples/: frame_definitions.yml  full_rk_model.py  parameters.yml
examples/rk_eos/: full_rk_model.py  parameters.yml  rk_parameter_fit.py  rkt.py  structures.yml
mushell/: constants.py  utilities.py
mushell/thermo/: __init__.py  contribution.py  cubic.py  frame.py  ideal.py
mushell/thermo/cubic/: __init__.py  rk.py
simu/: __init__.py  constants.py
simu/model/: base.py  hierarchy.py  numeric.py  parameter.py  property.py  utils.py
simu/thermo/: contribution.py  frame.py  ideal.py  special.py
simu/thermo/cubic/: __init__.py  rk.py
simu/utilities/: __init__.py  errors.py  molecules.py  quantity.py  structures.py  testing.py
src/simu/: __init__.py  _version.py
unittests/: reproductiontest.py
unittests/model_test/: material_test.py  model_test.py  models.py  parameter_test.py  property_test.py  refdata.json
unittests/thermo_test/: contribution_test.py  cubic_test.py  frame_test.py  refdata.json  special_test.py  store_test.py
unittests/utilities_test/: quantity_test.py  refdata.json
(+198 files in other folders)
