[metadata]
name = simu
version = attr: simu._version.VERSION
author = Volker Siepmann
author_email= volker.siepmann@gmail.com,
description = Equation oriented process modelling library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VolkerSiep/SiMu
keywords = thermodynamics, modelling
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry

[options]
python_requires = >=3.9
install_requires =
    numpy
    scipy
    casadi
    pyyaml

[options.extras_require]
dev =
    Sphinx>=2.2
    sphinxcontrib-bibtex>=2.4
    pytest>=5.3
    matplotlib

[options.package_data]
simu.data =
    uom_definitions.txt
    atomic_weights.yml
    thermo_parameters.yml
