[metadata]
name = simu
version = attr: simu._version.VERSION
author = Volker Siepmann
author_email= volker.siepmann@gmail.com,
description = Equation oriented process modelling library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VolkerSiep/SiMu
keywords = thermodynamics, modelling
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3.0 or later (LGPL-3.0-or-later)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry

[options]
python_requires = >=3.11
install_requires =
    pint
    numpy
    scipy
    casadi
    pyyaml

[options.extras_require]
dev =
    Sphinx>=2.2
    sphinxcontrib-bibtex>=2.4
    sphinx-copybutton
    pytest>=5.3
    pytest-doctestplus
    matplotlib

[options.package_data]
simu =
    py.typed
simu.data =  # TODO: update this, but in a smart way :-}
    uom_definitions.txt
    atomic_weights.yml
    thermo_parameters.yml
